# tmesh

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
examples/dual_mesh_2d/: main.rs
examples/partition_3d/: main.rs
pytmesh/: Cargo.toml
pytmesh/pytmesh/: __init__.py  test_mesh.py
pytmesh/src/: dual.rs  extruded.rs  lib.rs  mesh.rs  poly.rs
src/: boundary_mesh_2d.rs  boundary_mesh_3d.rs  graph.rs  hilbert.rs  lib.rs  mesh.rs  mesh_2d.rs  mesh_3d.rs  partition.rs  simplices.rs  split.rs
src/dual/: dual_mesh.rs  dual_mesh_2d.rs  dual_mesh_3d.rs  poly_mesh.rs
src/extruded/: mod.rs
src/graph/: mod.rs
src/interpolate/: mod.rs
src/io/: mod.rs  vtu_output.rs
src/mesh/: boundary_mesh_2d.rs  boundary_mesh_3d.rs  least_squares.rs  mesh_2d.rs  mesh_3d.rs  mod.rs  partition.rs  simplices.rs  split.rs  to_simplices.rs
src/spatialindex/: mod.rs  parry.rs
