[package]
name = "tmesh"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
coupe = { git = "https://github.com/tucanos/coupe.git", version = "0.1.0", branch="xg/dev" }
lindel = "0.1.1"
log = "0.4.27"
metis = { git = "https://github.com/tucanos/metis-rs.git", rev = "d31aa3e", optional=true}
minimeshb = { git = "https://github.com/tucanos/minimeshb.git", version = "0.1.0" }
nalgebra = { version = "0.33.2"}
quick-xml = { version = "0.37.4", features = ["serialize"] }
rand = "0.9.0"
rayon = "1.10.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"]}
stl_io = "0.8.5"
tempfile = "3.19.1"

[workspace]
members=[".", "pytmesh"]

[[example]]
name = "dual_mesh_2d"

[[example]]
name = "partition_3d"

[lints.rust]
missing_docs = "warn"
